# PulsePadGTK4

./: .clang-format  .clang-tidy  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
data/: io.github.pulsepadgtk.PulsePad.desktop  io.github.pulsepadgtk.PulsePad.metainfo.xml
docs/: USER_GUIDE.md  background_tasks.md  build.md  release-checklist.md  troubleshooting.md
src/: AudioEngine.cpp  AudioEngine.h  BoardConfig.cpp  BoardConfig.h  BoardPackage.cpp  BoardPackage.h  BoardPackageZip.cpp  BoardRepository.cpp  BoardRepository.h  MidiController.cpp  MidiController.h  PadGridPresenter.cpp  PadGridPresenter.h  PulsePadWindow.cpp  PulsePadWindow.h  Subprocess.cpp  Subprocess.h  TaskRunner.cpp  TaskRunner.h  UiDialogs.cpp  UiDialogs.h  UserMessages.cpp  UserMessages.h  Waveform.cpp  Waveform.h  main.cpp
tests/: test_board_config.cpp  test_board_package.cpp  test_midi_controller.cpp  test_subprocess.cpp  test_task_runner.cpp  test_user_messages.cpp  test_waveform.cpp
